--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,7 @@ input[type=number]::-webkit-inner-spin-button {
   -moz-appearance: none; 
   -webkit-appearance: none;
 }
+
+body {
+  /* font-family: 'Nanum Pen Script', cursive; */
+}
